devops-monitoring: docker-compose: Add DevOps Monitor UI service and update README
- Introduced a new service for the DevOps Monitor UI, a modern React-based dashboard, in the Docker Compose setup.
- Updated the README to highlight the new UI, including its features and access instructions.
- Added quick commands for managing the monitoring stack and UI development.

Signed-off-by: NotHarshhaa <reddyharshhaa12@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -121,6 +121,28 @@ services:
     networks:
       - monitoring
 
+  # DevOps Monitor UI - Modern web dashboard
+  devops-monitor-ui:
+    build:
+      context: ./ui
+      dockerfile: Dockerfile
+    container_name: devops-monitor-ui
+    ports:
+      - "4000:3000"
+    volumes:
+      - ./ui:/app
+      - /app/node_modules
+    environment:
+      - REACT_APP_API_URL=http://localhost:4000
+      - CHOKIDAR_USEPOLLING=true
+    restart: unless-stopped
+    networks:
+      - monitoring
+    depends_on:
+      - prometheus
+      - grafana
+      - loki
+
 volumes:
   prometheus_data:
   grafana_data:
