devops-monitoring: ui-next: Migrate to Next.js and update UI structure
- Replaced the existing React UI with a new Next.js implementation for improved performance and scalability.
- Updated Docker configurations to reflect the new UI directory structure and build process.
- Enhanced the README to provide clear instructions for the new setup and usage of the Next.js UI.
- Removed legacy files and configurations from the previous React setup to streamline the project.

Signed-off-by: NotHarshhaa <reddyharshhaa12@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -121,20 +121,21 @@ services:
     networks:
       - monitoring
 
-  # DevOps Monitor UI - Modern web dashboard
+  # DevOps Monitor UI - Modern Next.js web dashboard
   devops-monitor-ui:
     build:
-      context: ./ui
+      context: ./ui-next
       dockerfile: Dockerfile
     container_name: devops-monitor-ui
     ports:
       - "4000:3000"
     volumes:
-      - ./ui:/app
+      - ./ui-next:/app
       - /app/node_modules
+      - /app/.next
     environment:
-      - REACT_APP_API_URL=http://localhost:4000
-      - CHOKIDAR_USEPOLLING=true
+      - NODE_ENV=production
+      - PORT=3000
     restart: unless-stopped
     networks:
       - monitoring
