--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,17 +4,18 @@ services:
   # DevOps Monitor UI - Development mode with hot reloading
   devops-monitor-ui:
     build:
-      context: ./ui
+      context: ./ui-next
       dockerfile: Dockerfile.dev
     container_name: devops-monitor-ui-dev
     ports:
       - "4000:3000"
     volumes:
-      - ./ui:/app
+      - ./ui-next:/app
       - /app/node_modules
+      - /app/.next
     environment:
-      - REACT_APP_API_URL=http://localhost:4000
-      - CHOKIDAR_USEPOLLING=true
+      - NODE_ENV=development
+      - PORT=3000
       - WATCHPACK_POLLING=true
     restart: unless-stopped
     networks:
